# Copyright (C) 2022 The Qt Company Ltd.
# SPDX-License-Identifier: BSD-3-Clause

if(NOT TARGET Qt6::Widgets)
    return()
endif()
if(QT_FEATURE_animation)
    add_subdirectory(animation)
endif()
add_subdirectory(desktop)
add_subdirectory(dialogs)
qt_internal_add_example(gallery)
add_subdirectory(gestures)
add_subdirectory(graphicsview)
add_subdirectory(itemviews)
add_subdirectory(layouts)
add_subdirectory(painting)
add_subdirectory(richtext)
add_subdirectory(tools)
add_subdirectory(touch)
add_subdirectory(tutorials)
add_subdirectory(widgets)
if(QT_FEATURE_draganddrop)
    add_subdirectory(draganddrop)
endif()
if(QT_FEATURE_cursor)
    add_subdirectory(mainwindows)
endif()
